# Webserver_From_Scratch

./: .gitignore  CMakeLists.txt  README.md  WebServer.cpp  WebServer.h  main.cpp  test.cpp
html_css/: example.html
network/: BindingSocket.cpp  BindingSocket.h  ConnectingSocket.cpp  ConnectingSocket.h  SimpleSocket.cpp  SimpleSocket.h  webserver_networking.cpp  webserver_networking.h
network/server/: Request.cpp  Server.cpp  Server.h  SimpleServer.cpp  SimpleServer.h
network/socket/: BindingSocket.cpp  BindingSocket.h  ConnectingSocket.cpp  ConnectingSocket.h  ListeningSocket.cpp  ListeningSocket.h  SimpleSocket.cpp  SimpleSocket.h  webserver_sockets.cpp  webserver_sockets.h
parsers/: FileParser.cpp  FileParser.h  HTTPRequestParser.cpp  HTTPRequestParser.h  Request.h  SimpleParser.cpp  SimpleParser.h  webserver_parsers.cpp  webserver_parsers.h
